--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PrepX - Learning Path Creator</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -15,15 +18,27 @@
               'brand-accent': '#e5e7eb',
               'brand-text': '#111827',
             },
+            fontFamily: {
+              sans: ['Instrument Sans', 'sans-serif'],
+            }
           },
         },
       }
     </script>
     <style>
       body {
-        font-family: sans-serif;
+        font-family: 'Instrument Sans', sans-serif;
         background-color: theme('colors.brand-primary');
         color: theme('colors.brand-text');
+      }
+      /* Hide scrollbar for Chrome, Safari and Opera */
+      ::-webkit-scrollbar {
+        display: none;
+      }
+      /* Hide scrollbar for IE, Edge and Firefox */
+      * {
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
       }
     </style>
     <script type="importmap">
