feat: Add Instrument Serif font and new icons
Integrates the Instrument Serif font for use in titles, enhancing visual typography.
Introduces new SVG icons: ArrowUpIcon, FilmIcon, and HistoryIcon to expand the icon library for future features.
Updates `types.ts` to include types for chat functionality and removes a self-import to resolve declaration conflicts.
Includes a pre-built self-learning path that is added to user's paths if it doesn't exist.
Adds the `removeMajorPath` function to `PathContext` for managing major paths.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>PrepX - Learning Path Creator</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Instrument+Serif:ital,wght@0,400;1,400&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -20,6 +20,7 @@
             },
             fontFamily: {
               sans: ['Instrument Sans', 'sans-serif'],
+              serif: ['Instrument Serif', 'serif'],
             }
           },
         },
