Fix Tailwind CSS implementation and index.tsx import

--- a/index.html
+++ b/index.html
@@ -7,17 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Instrument+Serif:ital,wght@0,400;1,400&display=swap" rel="stylesheet">
-    <script src="https://cdn.tailwindcss.com"></script>
     <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              'brand-primary': '#ffffff',
-              'brand-secondary': '#f3f4f6', 
-              'brand-accent': '#e5e7eb',
-              'brand-text': '#111827',
-            },
+      // Tailwind config moved to tailwind.config.js
             fontFamily: {
               sans: ['Instrument Sans', 'sans-serif'],
               serif: ['Instrument Serif', 'serif'],
